--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Software Consultancy</title>
+    <title>ascensus digital consulting</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
@@ -15,29 +15,7 @@
     <section class="hero">
         <h1>ascensus digital consulting</h1>
         <p>fast flow for software teams</p>
+        <p><a href="mailto:connect@ascensusdigitalconsulting.com">connect@ascensusdigitalconsulting.com</a> | <a href="tel:(341) 222-8402">(341) 222-8402</a></p>
     </section>
-
-    <section class="about">
-
-        <form id="contactForm">
-            <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email" required>
-        
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-        
-            <button type="button" onclick="submitForm()">Submit</button>
-        </form>
-
-    </section>
-
-    <script>
-        function submitForm() {
-            // Simulate form submission (replace this with your actual form submission logic)
-            // For demonstration purposes, just showing a confirmation message
-            document.getElementById("contactForm").innerHTML = "Form submitted!";
-            // You may want to add code here to send data to your server using AJAX or another method
-        }
-    </script>
 </body>
 </html>
