test automation updates

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section class="hero">
-      <h1>ascensus digital consulting</h1>
+      <h1>Ascensus Digital Consulting</h1>
       <p>fast flow for software teams</p>
       <p>
         <a href="mailto:connect@ascensusdigitalconsulting.com"
