--- a/app/src/index.html
+++ b/app/src/index.html
@@ -1,21 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ascensus digital consulting</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/default.css">
-    <style>
-    </style>
-</head>
-<body>
+  <head>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H857RX9JBB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-H857RX9JBB');
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ascensus Digital Consulting</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/default.css" />
+  </head>
+  <body>
     <section class="hero">
-        <h1>ascensus digital consulting</h1>
-        <p>fast flow for software teams</p>
-        <p><a href="mailto:connect@ascensusdigitalconsulting.com">connect@ascensusdigitalconsulting.com</a> | <a href="tel:(341) 222-8402">(341) 222-8402</a></p>
+      <h1>Ascensus Digital Consulting</h1>
+      <p>fast flow for software teams</p>
+      <p>
+        <a href="mailto:connect@ascensusdigitalconsulting.com"
+          >connect@ascensusdigitalconsulting.com</a
+        >
+        | <a href="tel:(341) 222-8402">(341) 222-8402</a>
+      </p>
     </section>
-</body>
+  </body>
 </html>
