--- a/app/src/index.html
+++ b/app/src/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <section class="hero">
-      <h1>Ascensus Digital Consulting!</h1>
+      <h1>Ascensus Digital Consulting</h1>
       <p>fast flow for software teams</p>
       <p>
         <a href="mailto:connect@ascensusdigitalconsulting.com"
