amend index page

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/default.css" />
   </head>
   <body>
-    <section class="hero">
+    <div class="container-screen-home">
       <h1>Ascensus Digital Consulting</h1>
       <p>fast flow for software teams</p>
       <p>
@@ -35,6 +35,7 @@
         >
         | <a href="tel:(341) 222-8402">(341) 222-8402</a>
       </p>
-    </section>
+    </div>
   </body>
 </html>
+<!-- Test 1 -->
