--- a/app/src/index.html
+++ b/app/src/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/default.css" />
   </head>
   <body>
-    <div class="container-screen-home">
+    <div class="home-screen-container">
       <h1>Ascensus Digital Consulting</h1>
       <p>fast flow for software teams</p>
       <p>
