--- a/infra/git/test/workflow-test.html
+++ b/infra/git/test/workflow-test.html
@@ -1,1 +1,9 @@
-<html>Test id: <strong>1734492362</strong></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Workflow Test File</title>
+  </head>
+  <body>
+    Test id:<strong>1734492362</strong>
+  </body>
+</html>
