update sample file to test GitHub workflow, id: 1734493252

--- a/infra/git/test/workflow-test.html
+++ b/infra/git/test/workflow-test.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Workflow Test File</title>
-  </head>
-  <body>
-    Test id:<strong>1734492362</strong>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><title>Workflow Test File</title></head><body>Test id:<strong>1734493252</strong></body></html>
