--- a/web/src/index.html
+++ b/web/src/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div class="home-screen-container">
-      <h1>Ascensus Digital Consulting</h1>
+      <h1>Ascensus Digital Consulting [Hi Todd!]</h1>
       <p>fast flow for software teams</p>
       <p>
         <a href="mailto:connect@ascensusdigitalconsulting.com"
