--- a/web/src/index.html
+++ b/web/src/index.html
@@ -27,11 +27,11 @@
   </head>
   <body>
     <div class="home-screen-container">
-      <h1>Ascensus Digital Consulting [Hi Todd!]</h1>
+      <h1>Ascensus Digital Consulting</h1>
       <p>fast flow for software teams</p>
       <p>
         <a href="mailto:connect@ascensusdigitalconsulting.com"
-          >connect@ascensusdigitalconsulting.com</a
+          >connect@ascensus.digital</a
         >
         | <a href="tel:(341) 222-8402">(341) 222-8402</a>
       </p>
