--- a/web/src/index.html
+++ b/web/src/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="home-screen-container">
       <h1>Ascensus Digital Consulting</h1>
-      <p>fast flow for software teams</p>
+      <p>fast flow for software teams!</p>
       <p>
         <a href="mailto:connect@ascensusdigitalconsulting.com"
           >connect@ascensus.digital</a
